Generate game selection menu based on storage default
This has a parameter to allow selecting the base for storage, such as
internal, external, or sdcard that can be configured as the secondary
browser selection in options. It is currently set to the default
external storage as a base.

--- a/reicast/android/res/values/strings.xml
+++ b/reicast/android/res/values/strings.xml
@@ -7,5 +7,11 @@
     
     <string name="system_path">System Path (location of dc_boot.bin/dc_flash.bin)</string>
     <string name="browser_path">Default Browser Path</string>
+    
+    <string-array name="images">
+        <item>cdi</item>
+        <item>chd</item>
+        <item>gdi</item>
+    </string-array>
 
 </resources>
