Patch up a missing heading to provide better view definition

--- a/reicast/android/res/values/strings.xml
+++ b/reicast/android/res/values/strings.xml
@@ -7,6 +7,8 @@
     
     <string name="system_path">System Path (location of dc_boot.bin/dc_flash.bin)</string>
     <string name="browser_path">Default Browser Path</string>
+
+    <string name="games_listing">Available Dreamcast Games</string>
     
     <string-array name="images">
         <item>cdi</item>
