Provide a secondary selection for the base path to games

--- a/reicast/android/res/values/strings.xml
+++ b/reicast/android/res/values/strings.xml
@@ -6,8 +6,11 @@
     <string name="title_activity_main">reicast</string>
     
     <string name="system_path">System Path (location of dc_boot.bin/dc_flash.bin)</string>
-    <string name="browser_path">Default Browser Path</string>
-
+    <string name="browser_path">Default System Path</string>
+    
+    <string name="games_path">Storage Path (location of .gid .cdi or .cdh images)</string>
+    <string name="game_path">Default Game Storage</string>
+    
     <string name="games_listing">Available Dreamcast Games</string>
     
     <string-array name="images">
