--- a/reicast/android/res/values/strings.xml
+++ b/reicast/android/res/values/strings.xml
@@ -18,5 +18,26 @@
         <item>chd</item>
         <item>gdi</item>
     </string-array>
+    
+    <string name="drawer_open">Slider Menu Opened</string>
+    <string name="drawer_close">Slider Menu Closed</string>
+     
+    <!-- Nav Drawer Menu Items -->
+    <string-array name="nav_drawer_items">
+        <item >Browser</item>
+        <item >Options</item>
+        <item >About</item>
+    </string-array>
+     
+    <!-- Nav Drawer List Item Icons -->
+    <!-- Keep them in order as the titles are in -->
+    <array name="nav_drawer_icons">
+        <item>@drawable/disk_unknown</item>
+        <item>@drawable/config</item>
+        <item>@drawable/question</item> 
+    </array>
+     
+    <!-- Content Description -->
+    <string name="desc_list_item_icon">Item Icon</string>
 
 </resources>
