--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="game_path">Default Game Storage</string>
     <string name="select_stretch">Widescreen Mode</string>
     <string name="set_frameskip">Frameskipping Amount</string>
-    <string name="select_render">PVR Rendering</string>
+    <string name="select_render">Unstable Optimisations</string>
     <string name="games_listing">Available Dreamcast Games</string>
     
     <string-array name="images">
