--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -19,6 +19,17 @@
     <string name="select_render">PVR Rendering (does nothing for now)</string>
 
     <string name="games_listing">Available Dreamcast Games</string>
+
+    <string name="controller_1">Controller 1</string>
+    <string name="controller_2">Controller 2</string>
+    <string name="controller_3">Controller 3</string>
+    <string name="controller_4">Controller 4</string>
+    <string name="controller_none">None</string>
+    <string name="select_controller">Select Controller</string>
+    <string name="remove_controller">Remove Controller</string>
+    <string name="select_controller_title">Select Controller</string>
+    <string name="select_controller_message">Press any button on the controller to assign to port</string>
+    <string name="controller_already_in_use">This controller is already in use!</string>
     
     <string-array name="images">
         <item>cdi</item>
@@ -41,6 +52,7 @@
         <item>Browser</item>
         <item>Settings</item>
         <item>Paths</item>
+        <item>Controllers</item>
         <item>About</item>
     </string-array>
 
@@ -50,6 +62,7 @@
         <item>@drawable/disk_unknown</item>
         <item>@drawable/config</item>
         <item>@drawable/open_folder</item>
+        <item>@drawable/config</item>
         <item>@drawable/question</item>
     </array>
 
