--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -4,19 +4,19 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">reicast</string>
-    <string name="system_path">System Path (location of dc_boot.bin/dc_flash.bin)</string>
+    <string name="system_path">System Path (location of the data folder with dc_boot.bin/dc_flash.bin inside)</string>
     <string name="browser_path">Default System Path</string>
-    <string name="games_path">Storage Path (location of .gid .cdi or .cdh images)</string>
+    <string name="games_path">Storage Path (location of .gdi, .chd or .cdi images)</string>
     <string name="game_path">Default Game Storage</string>
 
     <string name="select_dynarec">Dynarec Options</string>
     <string name="select_unstable">Unstable Optimisations</string>
     <string name="select_region">DC Region</string>
     <string name="select_limitfps">Limit FPS</string>
-    <string name="select_mipmaps">Use Mipmaps</string>
+    <string name="select_mipmaps">Use Mipmaps (fix for old SGX540)</string>
     <string name="select_stretch">Widescreen Mode</string>
     <string name="set_frameskip">Frameskip Value</string>
-    <string name="select_render">PVR Rendering</string>
+    <string name="select_render">PVR Rendering (does nothing for now)</string>
 
     <string name="games_listing">Available Dreamcast Games</string>
     
