--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -8,6 +8,14 @@
     <string name="browser_path">Default System Path</string>
     <string name="games_path">Storage Path (location of .gdi, .chd or .cdi images)</string>
     <string name="game_path">Default Game Storage</string>
+    
+    <string name="boot_bios">Boot Dreamcast Bios</string>
+    <string name="missing_bios">BIOS Missing. The Dreamcast BIOS is required for this emulator to work. Place the BIOS file in %1$s/data/dc_boot.bin</string>
+    <string name="missing_flash">Flash Missing. The Dreamcast Flash is required for this emulator to work. Place the Flash file in %1$s/data/dc_flash.bin</string>
+    <string name="require_bios">You have to provide the BIOS</string>
+    
+    <string name="folder_bios">BOOT BIOS</string>
+    <string name="folder_select">SELECT CURRENT FOLDER</string>
 
     <string name="select_dynarec">Dynarec Options</string>
     <string name="select_unstable">Unstable Optimisations</string>
