--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -24,7 +24,8 @@
     <string name="controller_2">Controller 2</string>
     <string name="controller_3">Controller 3</string>
     <string name="controller_4">Controller 4</string>
-    <string name="controller_none">None</string>
+    <string name="controller_not_connected">Controller Not Connected</string>
+    <string name="controller_none_selected">No Controller Selected</string>
     <string name="select_controller">Select Controller</string>
     <string name="remove_controller">Remove Controller</string>
     <string name="select_controller_title">Select Controller</string>
