--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -30,6 +30,9 @@
     <string name="select_controller_title">Select Controller</string>
     <string name="select_controller_message">Press any button on the controller to assign to port</string>
     <string name="controller_already_in_use">This controller is already in use!</string>
+
+    <string name="about_title">About reicast</string>
+    <string name="about_text">reicast is a dreamcast emulator\n\nVersion:</string>
     
     <string-array name="images">
         <item>cdi</item>
