Squash: Add switch compat to unify layouts with previous APIs
Patch up the layouts to prevent Switch compat view errors

Make the layouts look the same regardless of screen width

Prevent stray view by generating the headings dynamically

Create more flexible borders and reorganize the main view

Finish up the layout changes, Adjust some API requirements

--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -81,5 +81,8 @@
 
     <!-- Content Description -->
     <string name="desc_list_item_icon">Item Icon</string>
+    
+    <string name="textOn">ON</string>
+    <string name="textOff">OFF</string>
 
 </resources>
