Fixed an outstanding bug in GL2JNIView that Left/Right Triggers would not get reset after pointer up action (reset would only occur if all fingers were lifted) Added Reset icon for touch controls reset Moved strings to string resource General cleanup...

--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -28,6 +28,8 @@
 
     <string name="games_listing">Available Dreamcast Games</string>
 
+    <string name="customize_touch_controls">Customize Touch Controls</string>
+    <string name="launch_editor">Launch Editor</string>
     <string name="touch_vibration">Touch Vibration</string>
     <string name="controller_1">Controller 1</string>
     <string name="controller_2">Controller 2</string>
