--- a/shell/android/res/values-jp/strings.xml
+++ b/shell/android/res/values-jp/strings.xml
@@ -28,13 +28,17 @@
 
     <string name="games_listing">利用可能なドリームキャストのゲーム</string>
 
-    <string name="controller_1">コントローラ 1</string>
-    <string name="controller_2">コントローラ 2</string>
-    <string name="controller_3">コントローラ 3</string>
-    <string name="controller_4">コントローラ 4</string>
-    <string name="controller_none">None</string>
-    <string name="select_controller">セレクトコントローラ</string>
-    <string name="remove_controller">コントローラを取り外し</string>
+    <string name="customize_touch_controls">Customize Touch Controls</string>
+    <string name="launch_editor">Launch Editor</string>
+    <string name="touch_vibration">Touch Vibration</string>
+    <string name="controller_a">コントローラ A</string>
+    <string name="controller_b">コントローラ B</string>
+    <string name="controller_c">コントローラ C</string>
+    <string name="controller_d">コントローラ D</string>
+    <string name="controller_not_connected">Controller Not Connected</string>
+    <string name="controller_none_selected">No Controller Selected</string>
+    <string name="select">選択する</string>
+    <string name="remove">削除する</string>
     <string name="select_controller_title">セレクトコントローラ</string>
     <string name="select_controller_message">ポートに割り当てるコントローラのいずれかのボタンを押してください</string>
     <string name="controller_already_in_use">このコントローラは、すでに使用されています！</string>
