Add a logging capability that will save to the home directory
This will solve those issues where people say the app crashed and have
little or no information that may be required to diagnose the issue.
This generates it into a file.

--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -87,4 +87,6 @@
     <string name="textOn">ON</string>
     <string name="textOff">OFF</string>
 
+    <string name="menu_debug">Save Error Logs</string>
+
 </resources>
