--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -43,11 +43,8 @@
     <string name="select_controller_message">Press any button on the controller to assign to port</string>
     <string name="controller_already_in_use">This controller is already in use!</string>
 
-    <string name="rating_title">Rate reicast</string>
-    <string name="rating_text">We are hard at work to bring the full Dreamcast experience to your Android device, so why not take a minute and tell us how you like it so far? We appreciate it!</string>
-
     <string name="about_title">About reicast</string>
-    <string name="about_text">reicast is a dreamcast emulator\n\nVersion:</string>
+    <string name="about_text">reicast is a dreamcast emulator\n\nVersion: %1$s\n\nWe are hard at work to bring the full Dreamcast experience to your Android device, so why not take a minute and tell us how you like it so far? We appreciate it!</string>
     
     <string-array name="images">
         <item>cdi</item>
