--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -42,6 +42,10 @@
     <string name="select_controller_title">Select Controller</string>
     <string name="select_controller_message">Press any button on the controller to assign to port</string>
     <string name="controller_already_in_use">This controller is already in use!</string>
+    
+    <string name="menu_edit_keycodes">Edit Key Bindings</string>
+    <string name="map_keycode_title">Modify Controller</string>
+    <string name="map_keycode_message">Press the new controller button for %1$s</string>
 
     <string name="about_title">About reicast</string>
     <string name="about_text">reicast is a dreamcast emulator\n\nVersion: %1$s\n\nWe work hard for you\nShare the love back and rate the app!</string>
