--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="select_controller_title">Select Controller</string>
     <string name="select_controller_message">Press any button on the controller to assign to port</string>
     <string name="controller_already_in_use">This controller is already in use!</string>
+    <string name="modified_layout">Enable Custom Key Layout</string>
     
     <string name="menu_edit_keycodes">Edit Key Bindings</string>
     <string name="map_keycode_title">Modify Controller</string>
