--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -47,6 +47,9 @@
     <string name="menu_edit_keycodes">Edit Key Bindings</string>
     <string name="map_keycode_title">Modify Controller</string>
     <string name="map_keycode_message">Press the new controller button for %1$s</string>
+    
+    <string name="moga_pro_connect">MOGA Pro Connected!</string>
+    <string name="moga_connect">MOGA Connected!</string>
 
     <string name="about_title">About reicast</string>
     <string name="about_text">reicast is a dreamcast emulator\n\nVersion: %1$s\n\n</string>
