--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -77,6 +77,7 @@
         <item>Paths</item>
         <item>Input</item>
         <item>About</item>
+        <item>Rate Me</item>
     </string-array>
 
     <!-- Nav Drawer List Item Icons -->
@@ -87,6 +88,7 @@
         <item>@drawable/open_folder</item>
         <item>@drawable/input</item>
         <item>@drawable/question</item>
+        <item>@drawable/profiler</item>
     </array>
 
     <!-- Content Description -->
