--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="controller_already_in_use">This controller is already in use!</string>
     <string name="modified_layout">Enable Custom Key Layout</string>
     
-    <string name="menu_edit_keycodes">Edit Key Bindings</string>
+    <string name="menu_edit_keycodes">Custom Button Layout</string>
     <string name="map_keycode_title">Modify Controller</string>
     <string name="map_keycode_message">Press the new controller button for %1$s</string>
     
