Open up compatibility mode to any device that attempts it
This adds compatibility mode as an option in 3.0+, not just for
unsupported APIs. This allows attempting to use controllers that are
otherwise undetected by standard input.

--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="select_controller_message">Press any button on the controller %1$s to assign to port</string>
     <string name="controller_already_in_use">This controller is already in use!</string>
     <string name="modified_layout">Enable Custom Key Layout</string>
+    <string name="controller_compat">Enable Compatibility Mode</string>
     
     <string name="menu_edit_keycodes">Custom Button Layout</string>
     <string name="map_keycode_title">Modify Controller</string>
