--- a/shell/android/res/values-jp/strings.xml
+++ b/shell/android/res/values-jp/strings.xml
@@ -28,20 +28,22 @@
 
     <string name="games_listing">利用可能なドリームキャストのゲーム</string>
 
-    <string name="customize_touch_controls">Customize Touch Controls</string>
-    <string name="launch_editor">Launch Editor</string>
-    <string name="touch_vibration">Touch Vibration</string>
+    <string name="customize_touch_controls">タッチコントロールをカスタマイズする</string>
+    <string name="launch_editor">エディタを起動します</string>
+    <string name="touch_vibration">振動をタッチ</string>
     <string name="controller_a">コントローラ A</string>
     <string name="controller_b">コントローラ B</string>
     <string name="controller_c">コントローラ C</string>
     <string name="controller_d">コントローラ D</string>
-    <string name="controller_not_connected">Controller Not Connected</string>
-    <string name="controller_none_selected">No Controller Selected</string>
+    <string name="controller_not_connected">コントローラ接続されていません</string>
+    <string name="controller_none_selected">でコントローラ選択されていません</string>
     <string name="select">選択する</string>
     <string name="remove">削除する</string>
     <string name="select_controller_title">セレクトコントローラ</string>
     <string name="select_controller_message">ポートに割り当てるコントローラのいずれかのボタンを押してください</string>
     <string name="controller_already_in_use">このコントローラは、すでに使用されています！</string>
+    <string name="modified_layout">カスタムキーレイアウトを可能にする</string>
+    <string name="controller_compat">互換モードを有効にする</string>
     
     <string-array name="images">
         <item>cdi</item>
