More translations, Visual cleanup of the about dialog box

--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="moga_connect">MOGA Connected!</string>
 
     <string name="about_title">About reicast</string>
-    <string name="about_text">reicast is a dreamcast emulator\n\nVersion: %1$s\n\n</string>
+    <string name="about_text">reicast is a dreamcast emulator\n\nVersion: %1$s</string>
     
     <string-array name="controllers">
     <item>Controller A</item>
