--- a/shell/android/res/values-jp/strings.xml
+++ b/shell/android/res/values-jp/strings.xml
@@ -14,17 +14,17 @@
     <string name="missing_flash">行方不明に点滅します。ドリームキャストのFlashが動作するためにこのエミュレータに必要です。 Flashファイル内に配置します %1$s/data/dc_flash.bin</string>
     <string name="require_bios">あなたは、BIOSを提供する必要が</string>
     
-    <string name="folder_bios">BOOT BIOS</string>
-    <string name="folder_select">SELECT CURRENT FOLDER</string>
+    <string name="folder_bios">BOOT BIOSを</string>
+    <string name="folder_select">現在のフォルダを選択</string>
 
-    <string name="select_dynarec">Dynarec Options</string>
-    <string name="select_unstable">Unstable Optimisations</string>
-    <string name="select_region">DC Region</string>
-    <string name="select_limitfps">Limit FPS</string>
-    <string name="select_mipmaps">Use Mipmaps (古いSGX540のために修正)</string>
-    <string name="select_stretch">Widescreen Mode</string>
-    <string name="set_frameskip">Frameskip Value</string>
-    <string name="select_render">PVR Rendering</string>
+    <string name="select_dynarec">Dynarecオプション</string>
+    <string name="select_unstable">不安定な最適化</string>
+    <string name="select_region">DC地域</string>
+    <string name="select_limitfps">限界FPS</string>
+    <string name="select_mipmaps">ミップマップを使用してください（SGX540フィックス）</string>
+    <string name="select_stretch">ワイドスクリーンモード</string>
+    <string name="set_frameskip">フレーム船舶の価値</string>
+    <string name="select_render">PVRレンダリング</string>
 
     <string name="games_listing">利用可能なドリームキャストのゲーム</string>
 
@@ -45,6 +45,23 @@
     <string name="modified_layout">カスタムキーレイアウトを可能にする</string>
     <string name="controller_compat">互換モードを有効にする</string>
     
+    <string name="customize_physical_controls">物理コントロールをカスタマイズする</string>
+    <string name="map_keycode_title">コントローラを変更する</string>
+    <string name="map_keycode_message">のための新しいコントローラのボタンを押してください %1$s</string>
+    
+    <string name="moga_pro_connect">MOGAプロ接続!</string>
+    <string name="moga_connect">MOGA接続!</string>
+
+    <string name="about_title">reicastについて</string>
+    <string name="about_text">reicastはドリームキャストエミュレータです\n\nバージョン: %1$s</string>
+    
+    <string-array name="controllers">
+    <item>コントローラ A</item>
+    <item>コントローラ B</item>
+    <item>コントローラ C</item>
+    <item>コントローラ D</item>
+    </string-array>
+    
     <string-array name="images">
         <item>cdi</item>
         <item>chd</item>
@@ -58,16 +75,16 @@
         <item>(Default)</item>
     </string-array>
 
-    <string name="drawer_open">Slider Menu Opened</string>
-    <string name="drawer_close">Slider Menu Closed</string>
+    <string name="drawer_open">スライダーメニューがオープン</string>
+    <string name="drawer_close">スライダーメニューが休館</string>
 
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
-        <item>Browser</item>
-        <item>Settings</item>
-        <item>Paths</item>
-        <item>Controllers</item>
-        <item>About</item>
+        <item>ブラウザ</item>
+        <item>セッティング</item>
+        <item>パス</item>
+        <item>コントローラー</item>
+        <item>およそ</item>
     </string-array>
 
     <!-- Nav Drawer List Item Icons -->
