--- a/shell/android/res/values-es/strings.xml
+++ b/shell/android/res/values-es/strings.xml
@@ -67,21 +67,12 @@
         <item>(Predeterminado)</item>
     </string-array>
 
-    <string name="drawer_open">Menú deslizante abierto</string>
-    <string name="drawer_close">Menú deslizante cerrado</string>
-
-    <!-- Nav Drawer Menu Items -->
-    <string-array name="nav_drawer_items">
-        <item>Navegador</item>
-        <item>Configuración</item>
-        <item>Rutas</item>
-        <item>Entrada</item>
-        <item>Acerca de</item>
-        <item>Califícame</item>
-    </string-array>
-
-    <!-- Content Description -->
-    <string name="desc_list_item_icon">Icono Elemento</string>
+    <string name="browser">Navegador</string>
+    <string name="settings">Configuración</string>
+    <string name="paths">Caminos</string>
+    <string name="input">Entrada</string>
+    <string name="about">Acerca de</string>
+    <string name="rateme">Rate Me</string>
     
     <string name="textOn">EN</string>
     <string name="textOff">OFF</string>
