--- a/shell/android/res/values-es/strings.xml
+++ b/shell/android/res/values-es/strings.xml
@@ -9,23 +9,23 @@
     <string name="game_path">Por defecto Game Almacenamiento</string>
     
     <string name="boot_bios">Boot Bios Dreamcast</string>
-    <string name="missing_bios">BIOS Missing. La Dreamcast BIOS se requiere para este emulador para trabajar. Coloque el archivo BIOS en %1$s/data/dc_boot.bin</string>
-    <string name="missing_flash">Flash de Desaparecidos. La Dreamcast Flash es necesario para este emulador para trabajar. Coloque el archivo Flash en %1$s/data/dc_flash.bin</string>
+    <string name="missing_bios">BIOS no encontrada. La Dreamcast BIOS se requiere para este emulador para trabajar. Coloque el archivo BIOS en %1$s/data/dc_boot.bin</string>
+    <string name="missing_flash">Flash no encontrada. La Dreamcast Flash es necesario para este emulador para trabajar. Coloque el archivo Flash en %1$s/data/dc_flash.bin</string>
     <string name="require_bios">Usted tiene que proporcionar la BIOS</string>
     
     <string name="folder_bios">BIOS BOOT</string>
-    <string name="folder_select">SELECCIONAR CARPETA ACTUAL</string>
+    <string name="folder_select">SELECCIONE LA CARPETA ACTUAL</string>
 
     <string name="select_dynarec">Opciones dynarec</string>
     <string name="select_unstable">Optimizaciones inestables</string>
-    <string name="select_region">DC Región</string>
-    <string name="select_limitfps">Limit FPS</string>
-    <string name="select_mipmaps">Uso Mipmaps (arreglo para viejos SGX540)</string>
+    <string name="select_region">Región DC</string>
+    <string name="select_limitfps">Límite FPS</string>
+    <string name="select_mipmaps">Uso Mipmaps (arreglo para Powervr SGX540)</string>
     <string name="select_stretch">Modo de pantalla ancha</string>
-    <string name="set_frameskip">Frameskip Valor</string>
-    <string name="select_render">PVR Rendering (no hace nada por el momento)</string>
+    <string name="set_frameskip">Valor salto de frames</string>
+    <string name="select_render">Renderizado PVR  (no hace nada por el momento)</string>
 
-    <string name="games_listing">Conjunto de discos por defecto</string>
+    <string name="games_listing">Lista de discos por defecto</string>
 
     <string name="customize_touch_controls">Personalizar controles táctiles</string>
     <string name="launch_editor">Inicie Editor</string>
@@ -68,16 +68,16 @@
     </string-array>
 
     <string name="drawer_open">Menú deslizante abierto</string>
-    <string name="drawer_close">Menú deslizador cerrado</string>
+    <string name="drawer_close">Menú deslizante cerrado</string>
 
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
         <item>Navegador</item>
         <item>Configuración</item>
-        <item>Caminos</item>
+        <item>Rutas</item>
         <item>Entrada</item>
         <item>Acerca de</item>
-        <item>Rate Me</item>
+        <item>Califícame</item>
     </string-array>
 
     <!-- Content Description -->
