--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -80,7 +80,7 @@
         <item>R - Region Free</item>
     </string-array>
     
-    <string name="browser">Broswer</string>
+    <string name="browser">Browser</string>
     <string name="settings">Settings</string>
     <string name="paths">Paths</string>
     <string name="input">Input</string>
