Add Traditional, @weihan1102 Simplified Chinese update

--- a/shell/android/res/values-zh-rCN/strings.xml
+++ b/shell/android/res/values-zh-rCN/strings.xml
@@ -1,6 +1,7 @@
 <resources>
 
     <string name="menu_settings">设置</string>
+    
     <string name="system_path">系统路径 (dc_boot.bin/dc_flash.bin 所在的路径)</string>
     <string name="browser_path">默认系统路径</string>
     <string name="games_path">储存路径 (.gdi, .chd 或 .cdi 镜像所在的路径)</string>
@@ -14,6 +15,7 @@
     <string name="folder_bios">启动BIOS</string>
     <string name="folder_select">选择当前路径</string>
 
+    <string name="experimental_opts">实验性 (可能造成不稳定)</string>
     <string name="select_dynarec">Dynarec设置</string>
     <string name="select_unstable">不稳定优化</string>
     <string name="select_region">DC区域</string>
@@ -42,6 +44,8 @@
     <string name="controller_already_in_use">该控制器已被使用!</string>
     <string name="modified_layout">启用自定义按键布局</string>
     <string name="controller_compat">启用兼容模式</string>
+    <string name="dpad_joystick">摇杆使用方向键布局</string>
+    <string name="mic_in_port_2">麦克风已插入 port 2</string>
     
     <string name="customize_physical_controls">自定义物理控制</string>
     <string name="map_keycode_title">修改控制器</string>
@@ -51,6 +55,9 @@
     <string name="moga_connect">MOGA已连接</string>
 
     <string name="about_text">reicast是一款dreamcast模拟器 \n\n版本: %1$s</string>
+    <string name="app_site">主页: http://reicast.com</string>
+    <string name="beta_site">测试版: http://reicast.loungekatt.com</string>
+    <string name="git_api">https://api.github.com/repos/reicast/reicast-emulator/commits</string>
     
     <string-array name="controllers">
     <item>控制器A</item>
@@ -59,48 +66,24 @@
     <item>控制器D</item>
     </string-array>
     
-    <string-array name="images">
-        <item>cdi</item>
-        <item>chd</item>
-        <item>gdi</item>
+    <string-array name="region">
+        <item>E - 美国</item>
+        <item>J - 日本</item>
+        <item>U - 欧洲</item>
+        <item>R - 无地区</item>
     </string-array>
     
-    <string-array name="region">
-        <item></item>
-        <item></item>
-        <item></item>
-        <item>(Default)</item>
-    </string-array>
-
-    <string name="drawer_open">Slider Menu Opened</string>
-    <string name="drawer_close">Slider Menu Closed</string>
-
-    <!-- Nav Drawer Menu Items -->
-    <string-array name="nav_drawer_items">
-        <item>浏览器</item>
-        <item>设置</item>
-        <item>路径</item>
-        <item>输入</item>
-        <item>关于</item>
-        <item>评分</item>
-    </string-array>
-
-    <!-- Nav Drawer List Item Icons -->
-    <!-- Matched to Nav Drawer Menu Items -->
-    <array name="nav_drawer_icons">
-        <item>@drawable/disk_unknown</item>
-        <item>@drawable/config</item>
-        <item>@drawable/open_folder</item>
-        <item>@drawable/input</item>
-        <item>@drawable/question</item>
-        <item>@drawable/star</item>
-    </array>
-
-    <!-- Content Description -->
-    <string name="desc_list_item_icon">Item Icon</string>
+    <string name="browser">浏览器</string>
+    <string name="settings">设置</string>
+    <string name="paths">路径</string>
+    <string name="input">输入</string>
+    <string name="about">关于</string>
+    <string name="rateme">评价我</string>
     
     <string name="textOn">开</string>
     <string name="textOff">关</string>
+    
+    <string name="platform">已识别  %1$s</string>
 
     <string name="menu_debug">保存出错日志</string>
 
