--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -90,8 +90,8 @@
     <string name="textOn">ON</string>
     <string name="textOff">OFF</string>
     
-    <string name="platform">Identified %1$s</string>
-
-    <string name="menu_debug">Save Error Logs</string>
+    <string name="platform">Copying logcat content to clipboard\nPlease paste in the issue report</string>
+    
+    <string name="menu_debug">Submit Error Logs</string>
 
 </resources>
