Update translations for new menu options [Need verification]

--- a/shell/android/res/values-de/strings.xml
+++ b/shell/android/res/values-de/strings.xml
@@ -75,7 +75,9 @@
     
     <string name="textOn">Ein</string>
     <string name="textOff">Aus</string>
+    
+    <string name="platform">Kopieren logcat Inhalt in die Zwischenablage kopieren\nBitte fügen Sie in der Ausgabe Bericht</string>
 
-    <string name="menu_debug">Debug Logs Speichern</string>
+    <string name="menu_debug">Senden Debug-Protokolle</string>
 
 </resources>
