--- a/shell/android/res/values-es/strings.xml
+++ b/shell/android/res/values-es/strings.xml
@@ -75,6 +75,8 @@
     <string name="textOn">EN</string>
     <string name="textOff">OFF</string>
 
-    <string name="menu_debug">Guarde registros de errores</string>
+    <string name="platform">Contenido Copiado Logcat al portapapeles\nPor favor, pegue en el informe de problema</string>
+    
+    <string name="menu_debug">Enviar registros de errores</string>
 
 </resources>
