--- a/shell/android/res/values-jp/strings.xml
+++ b/shell/android/res/values-jp/strings.xml
@@ -60,10 +60,10 @@
     </string-array>
     
     <string-array name="region">
-        <item></item>
-        <item></item>
-        <item></item>
-        <item>(Default)</item>
+        <item>E - 米国</item>
+        <item>J - 日本の</item>
+        <item>U - 欧州の</item>
+        <item>R - リージョンフリー</item>
     </string-array>
 
     <string name="browser">ブラウザ</string>
@@ -71,11 +71,13 @@
     <string name="paths">パス</string>
     <string name="input">コントローラー</string>
     <string name="about">およそ</string>
-    <string name="rateme">Rate Me</string>
+    <string name="rateme">私を評価してください</string>
     
-    <string name="textOn">EN</string>
-    <string name="textOff">OFF</string>
+    <string name="textOn">上の</string>
+    <string name="textOff">オフ</string>
 
-    <string name="menu_debug">Guarde registros de errores</string>
+    <string name="platform">クリップボードにコピーするlogcatをコンテンツ\n問題報告書に貼り付けてください</string>
+    
+    <string name="menu_debug">デバッグログを提出</string>
 
 </resources>
