--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -54,6 +54,10 @@
     <string name="map_keycode_title">Modify Controller</string>
     <string name="map_keycode_message">Press the new controller button for %1$s</string>
     
+    <string name="bios_menu">Press the %1$s button for a menu</string>
+    <string name="back_button">back</string>
+    <string name="menu_button">menu</string>
+    
     <string name="moga_pro_connect">MOGA Pro Connected!</string>
     <string name="moga_connect">MOGA Connected!</string>
 
