--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="folder_bios">BOOT BIOS</string>
     <string name="folder_select">SELECT CURRENT FOLDER</string>
 
+    <string name="optimization_opts">Optimization and Debugging Options</string>
     <string name="experimental_opts">Experimental (May cause widespread panic)</string>
     <string name="select_dynarec">Dynarec Options</string>
     <string name="select_unstable">Unstable Optimisations</string>
@@ -26,6 +27,7 @@
     <string name="set_frameskip">Frameskip Value</string>
     <string name="select_render">PVR Rendering (does nothing for now)</string>
     <string name="select_software">Force Software Rendering</string>
+    <string name="select_sound">Enable Emulator Sound</string>
     <string name="select_force_gpu">Force v6 GPU Config</string>
     <string name="default_disk">Set Default Disk</string>
     <string name="show_profiling_tools">Show BIOS Debug Tools</string>
