--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="select_stretch">Widescreen Mode</string>
     <string name="set_frameskip">Frameskip Value</string>
     <string name="select_render">PVR Rendering (does nothing for now)</string>
+    <string name="select_fps">Show OnScreen FPS</string>
     <string name="select_software">Force Software Rendering</string>
     <string name="select_sound">Enable Emulator Sound</string>
     <string name="select_force_gpu">Force v6 GPU Config</string>
