--- a/shell/android/res/values-es/strings.xml
+++ b/shell/android/res/values-es/strings.xml
@@ -49,7 +49,8 @@
     <string name="moga_pro_connect">MOGA Pro conectado!</string>
     <string name="moga_connect">MOGA conectado!</string>
 
-    <string name="about_text">reicast es un emulador de Dreamcast\n\nVersion: %1$s</string>
+    <string name="about_text">reicast es un emulador de Dreamcast</string>
+    <string name="revision_text">Version: %1$s [%2$s]</string>
     
     <string-array name="controllers">
     <item>Controlador A</item>
