--- a/shell/android/res/values-fr/strings.xml
+++ b/shell/android/res/values-fr/strings.xml
@@ -52,7 +52,8 @@
     <string name="moga_pro_connect">MOGA Pro connecté</string>
     <string name="moga_connect">MOGA connecté</string>
 
-    <string name="about_text">reicast est un émulateur dreamcast\n\nVersion: %1$s</string>
+    <string name="about_text">reicast est un émulateur dreamcast</string>
+    <string name="revision_text">Version: %1$s [%2$s]</string>
     <string name="app_site">Site web officiel: http://reicast.com</string>
     <string name="beta_site">Bétas: http://reicast.loungekatt.com</string>
     <string name="git_api">https://api.github.com/repos/NoblesseOblige/reicast-emulator/commits</string>
