--- a/shell/android/res/values-ko/strings.xml
+++ b/shell/android/res/values-ko/strings.xml
@@ -53,7 +53,8 @@
     <string name="moga_pro_connect">MOGA 프로 연결!</string>
     <string name="moga_connect">MOGA 연결!</string>
 
-    <string name="about_text">reicast는 드림 캐스트 에뮬레이터\n\n버전: %1$s</string>
+    <string name="about_text">reicast는 드림 캐스트 에뮬레이터</string>
+    <string name="revision_text">버전: %1$s [%2$s]</string>
     <string name="app_site">홈페이지: http://reicast.com</string>
     <string name="beta_site">베타: http://reicast.loungekatt.com</string>
     <string name="git_api">https://api.github.com/repos/reicast/reicast-emulator/commits</string>
