--- a/shell/android/res/values-pt/strings.xml
+++ b/shell/android/res/values-pt/strings.xml
@@ -53,7 +53,8 @@
     <string name="moga_pro_connect">MOGA Pro Conectado!</string>
     <string name="moga_connect">MOGA Conectado!</string>
 
-    <string name="about_text">reicast é um emulador de Dreamcast\n\nVersão: %1$s</string>
+    <string name="about_text">reicast é um emulador de Dreamcast</string>
+    <string name="revision_text">Versão: %1$s [%2$s]</string>
     <string name="app_site">Página: http://reicast.com</string>
     <string name="beta_site">Betas: http://reicast.loungekatt.com</string>
     <string name="git_api">https://api.github.com/repos/reicast/reicast-emulator/commits</string>
