--- a/shell/android/res/values-zh/strings.xml
+++ b/shell/android/res/values-zh/strings.xml
@@ -52,7 +52,8 @@
     <string name="search_button">搜尋</string>
     <string name="moga_pro_connect">MOGA Pro已連接!</string>
     <string name="moga_connect">MOGA已連接</string>
-    <string name="about_text">reicast是一款dreamcast模擬器 \n\n版本: %1$s</string>
+    <string name="about_text">reicast是一款dreamcast模擬器</string>
+    <string name="revision_text">版本: %1$s [%2$s]</string>
     <string name="app_site">主頁: http://reicast.com</string>
     <string name="beta_site">測試版: http://reicast.loungekatt.com</string>
     <string name="git_api">https://api.github.com/repos/reicast/reicast-emulator/commits</string>
