--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="select_fps">Show OnScreen FPS</string>
     <string name="select_software">Force Software Rendering</string>
     <string name="select_sound">Enable Emulator Sound</string>
+    <string name="select_depth">Rendering Depth</string>
     <string name="select_force_gpu">Force v6 GPU Config</string>
     <string name="default_disk">Set Default Disk</string>
 
@@ -78,6 +79,12 @@
     <item>Controller B</item>
     <item>Controller C</item>
     <item>Controller D</item>
+    </string-array>
+
+    <string-array name="depth">
+        <item>16</item>
+        <item>24</item>
+        <item>32</item>        
     </string-array>
     
     <string-array name="images">
