--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -36,6 +36,10 @@
     <string name="games_listing">Available Dreamcast Games</string>
 
     <string name="report_issue">Previous Crash Detected</string>
+    <string name="platform">Copying logcat content to clipboard\nPlease paste in the issue report</string>
+    <string name="log_saved">Log saved to %1$s</string>
+    <string name="bios_config">Configuration failed!</string>
+    <string name="menu_debug">Submit Error Logs</string>
 
     <string name="customize_touch_controls">Customize Touch Controls</string>
     <string name="launch_editor">Launch Editor</string>
@@ -109,9 +113,5 @@
     
     <string name="textOn">ON</string>
     <string name="textOff">OFF</string>
-    
-    <string name="platform">Copying logcat content to clipboard\nPlease paste in the issue report</string>
-    <string name="bios_config">Configuration failed!</string>
-    <string name="menu_debug">Submit Error Logs</string>
 
 </resources>
