--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -66,7 +66,7 @@
     
     <string name="bios_menu">Press the %1$s button for a menu</string>
     <string name="back_button">back</string>
-    <string name="search_button">search</string>
+    <string name="menu_button">menu</string>
     
     <string name="moga_pro_connect">MOGA Pro Connected!</string>
     <string name="moga_connect">MOGA Connected!</string>
