Update the label to prevent attempting to continue mapping

--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -115,4 +115,7 @@
     <string name="textOn">ON</string>
     <string name="textOff">OFF</string>
 
+    <string name="cancel">Cancel</string>
+    <string name="manual">Manual</string>
+
 </resources>
